# cynic

./: .clang-format  .editorconfig  .gitignore  ERROR_MESSAGES.md  LICENSE  README.md  README_DESIGN.md  meson.build
docs4/: modules.md
examples1/: enums.cyc  enums.zig  files.cyc  files.go  files.hs  files.rs  files.zig  hello.go  hello.ha  interface.cyc  interface.go  interface.rs  morse.cyc  morse.hs  morse.kit  morse.ts  paren.cyc  paren.kit  sock_client.c  sock_server.c  sock_server.cyc  structs.cyc  structs.zig  test.hs  test.rs  tree.cyc  tree.go  tree.kit  tree.rs  tree.v  unions.cyc  unions.zig  values.cyc  zmq_client.c  zmq_server.c
examples2/cynic/: build.cyc
examples2/cynic/src/: prelude.cyc
examples2/cynic/src/data/: bool.cyc  maybe.cyc  result.cyc
examples2/cynic/src/err/: error.cyc
examples2/cynic/src/ffi/: num.cyc  ref.cyc  str.cyc
examples2/cynic/src/ops/: bit.cyc  cmp.cyc  math.cyc
examples2/cynic/src/prim/: num.cyc  ref.cyc  str.cyc
examples2/skeptic/: build.cyc
examples2/skeptic/src/common/: hash.cyc  iterator.cyc
examples2/skeptic/src/mem/: allocator.cyc
examples2/wiyata/src/leetcode/: valid_parentheses.cyc
examples3/cynic/: Package.cyc
examples3/cynic/src/: Prelude.cyc
examples3/cynic/src/Control/: Applicative.cyc  Functor.cyc
examples3/cynic/src/Data/: Maybe.cyc  Result.cyc
examples3/cynic/src/Primitive/: Numeral.cyc  Pointer.cyc
examples3/skeptic/: Package.cyc
examples3/wiyata/src/LeetCode/: ValidParentheses.cyc
examples4/cynic/: build.cyc
examples4/cynic/src/: prelude.cyc
examples4/cynic/src/data/: bool.cyc  maybe.cyc  result.cyc
examples4/cynic/src/err/: error.cyc
examples4/cynic/src/ffi/: num.cyc  ref.cyc  str.cyc
examples4/cynic/src/ops/: bit.cyc  cmp.cyc  math.cyc
examples4/cynic/src/prim/: num.cyc  ref.cyc  str.cyc
examples4/skeptic/src/data/: array.cyc
examples4/skeptic/src/mem/: allocator.cyc
examples4/wiyata/: build.cyc
examples4/wiyata/src/leetcode/: valid_parentheses.cyc
src/: lexer.c  lexer.h  main.c  node.h  token.c  token.h  types.h
test/: lexer_test.c
tests/: lexer_test.c
